# Project_Reset

./: CMakeLists.txt  CMakePresets.json  compile_commands.json  compile_shaders.bat
.cache/clangd/index/: _fixes.hpp.69A7BF768390F4F7.idx  _fixes.hpp.AAFC2EE7BEC6DEDC.idx  _fixes.hpp.DC0CAC1788A06AD8.idx  _vectorize.hpp.3089A6C7EDECEE19.idx  _vectorize.hpp.547F76EF9C1A9D47.idx  _vectorize.hpp.93FD12E902E1B0EA.idx  app.cpp.0439C0BAB280CC72.idx  app.hpp.B686BDE448A7897B.idx  buffer.cpp.07ACA24D85FF1C30.idx  buffer.hpp.ACD454E9F02282EF.idx  camera.cpp.FC9E82547224641B.idx  camera.hpp.FDB495A42AA0B118.idx  chunk.hpp.1C9555EB1A64F1FB.idx  common.hpp.B2214F5AC85B28EC.idx  common.hpp.E1B023C482586EBB.idx  common.hpp.F9035DBAF7AFF907.idx  compute_common.hpp.020EC96709EDA51C.idx  compute_common.hpp.D99B5A8F7A03AF77.idx  compute_common.hpp.F7CE6479436877BA.idx  compute_vector_decl.hpp.7A120B0E3893D5D8.idx  compute_vector_decl.hpp.DFF0FD85DCD85039.idx  compute_vector_decl.hpp.EC96A3D412F9D79D.idx  compute_vector_relational.hpp.3ECD3ADE81A5A387.idx  compute_vector_relational.hpp.8D763D7F1E4AE8AA.idx  compute_vector_relational.hpp.FF83433EF160818B.idx  constants.hpp.12A461ED03E26660.idx  constants.hpp.41299490A144FBE8.idx  constants.hpp.AE3102D75717ACBC.idx  constants.inl.AC9B3A8E791A7353.idx  constants.inl.CED78200EBC63CB4.idx  constants.inl.FF9F6CADD23EEA18.idx  context.c.091E1B35AA9337DB.idx  context.c.DF0361B039EB4B01.idx  context.c.ECCDE00CABFD6427.idx  descriptors.cpp.404D74C5E1D95A2D.idx  descriptors.hpp.55B89A98E41DC43B.idx  device.cpp.61D628CE457BED3F.idx  device.hpp.C1A082113B199F6B.idx  dual_quaternion.hpp.09BDB6BCA54F0924.idx  dual_quaternion.hpp.534540B5879C85DC.idx  (+644 more)
include/: app.hpp  buffer.hpp  camera.hpp  chunk.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  keyboard_movement_controller.hpp  model.hpp  pipeline.hpp  point_light_system.hpp  render_system.hpp  renderer.hpp  swap_chain.hpp  utils.hpp  window.hpp
raw_shaders/: shader.frag  shader.vert
shaders/: shader.frag.spv
src/: app.cpp  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  game_object.cpp  keyboard_movement_controller.cpp  main.cpp  model.cpp  pipeline.cpp  point_light_system.cpp  render_system.cpp  renderer.cpp  swap_chain.cpp  window.cpp
